--- a/ep2/exemplo1.ipynb
+++ b/ep2/exemplo1.ipynb
@@ -38,6 +38,11 @@
     "        \n",
     "    elif example == 3:\n",
     "        return x**2\n",
+    "    else:\n",
+    "        if calota:\n",
+    "            return np.sqrt(1.0 - x**2)\n",
+    "        else:\n",
+    "            return np.exp(-1.0 * x**2)\n",
     "    \n",
     "def f(x,y,example):\n",
     "    if example == 1:\n",
@@ -56,6 +61,8 @@
     "            return np.sqrt(fx**2 + fy**2 + 1.0)\n",
     "        else:\n",
     "            return np.exp(y / x)\n",
+    "    else:\n",
+    "        return y\n",
     "\n",
     "def Gaussian_double_integral(example):\n",
     "               \n",
@@ -65,6 +72,13 @@
     "    if example == 3:\n",
     "        a = 0.1\n",
     "        b = 0.5\n",
+    "    elif example == 4:\n",
+    "        if calota:\n",
+    "            a = 0.75\n",
+    "            b = 1.0\n",
+    "        else:\n",
+    "            a = -1.0\n",
+    "            b = 1.0\n",
     "        \n",
     "    # Change of variable x\n",
     "    h1 = 0.5 * (a + b)\n",
@@ -97,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 6 # Number of roots and weights\n",
+    "n = 10 # Number of roots and weights\n",
     "\n",
     "x = np.empty(n) # Allocating the roots vector\n",
     "w = np.empty(n) # Allocating the weights vector\n",
@@ -153,7 +167,8 @@
    "id": "c3c8274a",
    "metadata": {},
    "source": [
-    "### Cube"
+    "### Cube: \n",
+    "$V = \\displaystyle\\int_0^1\\int_0^1 dx\\,dy = 1.$"
    ]
   },
   {
@@ -184,7 +199,8 @@
    "id": "54427565",
    "metadata": {},
    "source": [
-    "### Tetrahedron"
+    "### Tetrahedron: \n",
+    "$V = \\displaystyle\\int_0^1\\left(\\int_0^{1-x}(1-x-y)\\,dy\\right)dx = \\dfrac{1}{6}$."
    ]
   },
   {
@@ -197,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The volume of the tetrahedron is:  0.16666666666666666\n"
+      "The volume of the tetrahedron is:  0.16666666666666669\n"
      ]
     }
    ],
@@ -222,7 +238,8 @@
    "id": "c8b1f7f4",
    "metadata": {},
    "source": [
-    "### First integral"
+    "### First integral: \n",
+    "$A = \\displaystyle\\int_0^1\\left(\\int_0^{1-x^2}dy\\right)dx = \\dfrac{2}{3}$."
    ]
   },
   {
@@ -235,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Area A for the first integral is:  0.6666666666666667\n"
+      "The Area A for the first integral is:  0.6666666666666666\n"
      ]
     }
    ],
@@ -253,7 +270,8 @@
    "id": "cc8e9e53",
    "metadata": {},
    "source": [
-    "### Second integral"
+    "### Second integral: \n",
+    "$A = \\displaystyle\\int_0^1\\left(\\int_0^{\\sqrt{1-y}}dx\\right)dy = \\dfrac{2}{3}$."
    ]
   },
   {
@@ -266,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Area A for the second integral is:  0.6670464379156136\n"
+      "The Area A for the second integral is:  0.6667560429365088\n"
      ]
     }
    ],
@@ -291,7 +309,12 @@
    "id": "28fd6098",
    "metadata": {},
    "source": [
-    "### Area"
+    "### Area: \n",
+    "$f(x,y)=e^{y/x}\\Rightarrow f_x(x,y)=\\dfrac{-y}{x}\\,e^{y/x}\\quad\\text{and}\\quad f_y(x,y)=\\dfrac{1}{x}\\,e^{y/x}$. Then,\n",
+    "\n",
+    "$$\n",
+    "A = \\displaystyle\\int_{0.1}^{0.5}\\left(\\int_{x^3}^{x^2}\\sqrt{f_x(x,y)^2+f_y(x,y)^2+1}\\,dy\\right) dy = 0.105498.\n",
+    "$$"
    ]
   },
   {
@@ -304,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Area of the surface is:  0.10549788240049787\n"
+      "The Area of the surface is:  0.10549788240051992\n"
      ]
     }
    ],
@@ -322,7 +345,8 @@
    "id": "67632e67",
    "metadata": {},
    "source": [
-    "### Volume"
+    "### Volume:\n",
+    "$V = \\displaystyle\\int_{0.1}^{0.5}\\left(\\int_{x^3}^{x^2}e^{y/x}\\,dy\\right)dx = 0.0333056.$"
    ]
   },
   {
@@ -335,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Volume of the surface is:  0.03330556611623719\n"
+      "The Volume of the surface is:  0.03330556611623208\n"
      ]
     }
    ],
@@ -346,6 +370,85 @@
     "\n",
     "print(\"The Volume of the surface is: \",integral)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8786634e",
+   "metadata": {},
+   "source": [
+    "## Example 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc631480",
+   "metadata": {},
+   "source": [
+    "## \"Calota\":\n",
+    "$V = 2\\pi\\displaystyle\\int_{3/4}^1\\left(\\int_{0}^{\\sqrt{1-x^2}}y\\,dy\\right)dx = \\dfrac{11\\pi}{192} = 0.17998707911191522$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1d87ed34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Volume of the calota is:  0.17998707911191525\n"
+     ]
+    }
+   ],
+   "source": [
+    "calota = True\n",
+    "example = 4\n",
+    "\n",
+    "integral = Gaussian_double_integral(example)\n",
+    "\n",
+    "print(\"The Volume of the calota is: \",2.0 * np.pi * integral)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2981432c",
+   "metadata": {},
+   "source": [
+    "## Solid of revolution:\n",
+    "$V = 2\\pi\\displaystyle\\int_{-1}^{1}\\left(\\int_0^{e^{-y^2}}x\\, dx\\right)dy = 3.75822.$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "97e90791",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Volume of the solid is:  3.7582496332093873\n"
+     ]
+    }
+   ],
+   "source": [
+    "calota = False\n",
+    "\n",
+    "integral = Gaussian_double_integral(example)\n",
+    "\n",
+    "print(\"The Volume of the solid is: \",2.0 * np.pi * integral)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf3400b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
