--- a/ep2/ep2.ipynb
+++ b/ep2/ep2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "47a25476",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "859c509f",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,17 @@
     "\n",
     "def Gaussian_double_integral(example,n):\n",
     "    \n",
-    "    if n == 6:\n",
+    "    if n == 3:\n",
+    "        r[:] = 0.0; w[:] = 0.0\n",
+    "        r[0] = -np.sqrt(0.6)\n",
+    "        r[1] = 0.0\n",
+    "        r[2] = -r[0]\n",
+    "        \n",
+    "        w[0] = 5.0 / 9.0\n",
+    "        w[1] = 8.0 / 9.0\n",
+    "        w[2] = w[0]\n",
+    "    \n",
+    "    elif n == 6:\n",
     "        r[:] = 0.0; w[:] = 0.0\n",
     "        r[0] = 0.2386191860831969086305017\n",
     "        r[1] = 0.6612093864662645136613996\n",
@@ -103,8 +113,10 @@
     "        w[4] = 0.0666713443086881375935688\n",
     "\n",
     "    # Symmetry of roots and weights\n",
-    "    r[int(n/2):n] = -1.0 * np.flip(r)[10 - int(n/2):]\n",
-    "    w[int(n/2):n] = np.flip(w)[10 - int(n/2):]\n",
+    "    \n",
+    "    if n > 3:\n",
+    "        r[int(n/2):n] = -1.0 * np.flip(r)[10 - int(n/2):]\n",
+    "        w[int(n/2):n] = np.flip(w)[10 - int(n/2):]\n",
     "    \n",
     "    a = 0.0\n",
     "    b = 1.0\n",
@@ -146,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c5cbbf9b",
    "metadata": {},
    "outputs": [],
@@ -174,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "88c2b425",
    "metadata": {},
    "outputs": [
@@ -182,6 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The volume of the cube with n = 3 is:  1.0\n",
       "The volume of the cube with n = 6 is:  1.0\n",
       "The volume of the cube with n = 8 is:  1.0\n",
       "The volume of the cube with n = 10 is:  1.0\n"
@@ -191,6 +204,10 @@
    "source": [
     "cubo = True\n",
     "example = 1\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The volume of the cube with n = 3 is: \",integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cbeecaf1",
    "metadata": {},
    "outputs": [
@@ -224,6 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The volume of the tetrahedron with n = 3 is:  0.16666666666666669\n",
       "The volume of the tetrahedron with n = 6 is:  0.16666666666666666\n",
       "The volume of the tetrahedron with n = 8 is:  0.16666666666666666\n",
       "The volume of the tetrahedron with n = 10 is:  0.16666666666666669\n"
@@ -232,6 +250,10 @@
    ],
    "source": [
     "cubo = False\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The volume of the tetrahedron with n = 3 is: \",integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -265,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4f1b3a82",
    "metadata": {},
    "outputs": [
@@ -273,6 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The area A for first integral with n = 3 is:  0.6666666666666666\n",
       "The area A for first integral with n = 6 is:  0.6666666666666667\n",
       "The area A for first integral with n = 8 is:  0.6666666666666666\n",
       "The area A for first integral with n = 10 is:  0.6666666666666666\n"
@@ -282,6 +305,10 @@
    "source": [
     "first = True\n",
     "example = 2\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The area A for first integral with n = 3 is: \",integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -307,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1e93836c",
    "metadata": {},
    "outputs": [
@@ -315,6 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The area A for the second integral with n = 3 is:  0.6691796338994718\n",
       "The area A for the second integral with n = 6 is:  0.6670464379156136\n",
       "The area A for the second integral with n = 8 is:  0.6668355801001764\n",
       "The area A for the second integral with n = 10 is:  0.6667560429365088\n"
@@ -323,6 +351,10 @@
    ],
    "source": [
     "first = False\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The area A for the second integral with n = 3 is: \",integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -360,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "778e5402",
    "metadata": {},
    "outputs": [
@@ -368,6 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The area of the surface with n = 3 is:  0.10549832519645636\n",
       "The area of the surface with n = 6 is:  0.10549788240049787\n",
       "The area of the surface with n = 8 is:  0.10549788240051997\n",
       "The area of the surface with n = 10 is:  0.10549788240051992\n"
@@ -377,6 +410,10 @@
    "source": [
     "area = True\n",
     "example = 3\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The area of the surface with n = 3 is: \",integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -402,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "391ef05f",
    "metadata": {},
    "outputs": [
@@ -410,6 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The volume of the surface with n = 3 is:  0.03330583133480737\n",
       "The volume of the surface with n = 6 is:  0.03330556611623719\n",
       "The volume of the surface with n = 8 is:  0.033305566116232074\n",
       "The volume of the surface with n = 10 is:  0.03330556611623208\n"
@@ -418,6 +456,10 @@
    ],
    "source": [
     "area = False\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The volume of the surface with n = 3 is: \",integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -468,6 +510,8 @@
    "source": [
     "calota = True\n",
     "example = 4\n",
+    "\n",
+    "\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
