--- a/ep2/ep2.ipynb
+++ b/ep2/ep2.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "47a25476",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import integrate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "859c509f",
    "metadata": {},
    "outputs": [],
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "c5cbbf9b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "88c2b425",
    "metadata": {},
    "outputs": [
@@ -219,7 +220,7 @@
     "\n",
     "# n = 10\n",
     "integral = Gaussian_double_integral(example,10)\n",
-    "print(\"The volume of the cube with n = 10 is: \",integral)"
+    "print(\"The volume of the cube with n = 10 is: \",integral)\n"
    ]
   },
   {
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "cbeecaf1",
    "metadata": {},
    "outputs": [
@@ -241,6 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The 'exact' solution is:  0.16666666666666669\n",
       "The volume of the tetrahedron with n = 3 is:  0.16666666666666669\n",
       "The volume of the tetrahedron with n = 6 is:  0.16666666666666666\n",
       "The volume of the tetrahedron with n = 8 is:  0.16666666666666666\n",
@@ -250,6 +252,10 @@
    ],
    "source": [
     "cubo = False\n",
+    "\n",
+    "F = lambda y, x: 1.0 - x - y\n",
+    "exact = integrate.dblquad(F, 0, 1, lambda x: 0, lambda x: 1.0 - x)\n",
+    "print(\"The 'exact' solution is: \",exact[0])\n",
     "\n",
     "# n = 3\n",
     "integral = Gaussian_double_integral(example,3)\n",
@@ -287,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "4f1b3a82",
    "metadata": {},
    "outputs": [
@@ -295,6 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The 'exact' solution is:  0.6666666666666666\n",
       "The area A for first integral with n = 3 is:  0.6666666666666666\n",
       "The area A for first integral with n = 6 is:  0.6666666666666667\n",
       "The area A for first integral with n = 8 is:  0.6666666666666666\n",
@@ -305,6 +312,10 @@
    "source": [
     "first = True\n",
     "example = 2\n",
+    "\n",
+    "F = lambda y, x: 1.0\n",
+    "exact = integrate.dblquad(F, 0, 1, lambda x: 0, lambda x: 1.0 - x**2)\n",
+    "print(\"The 'exact' solution is: \",exact[0])\n",
     "\n",
     "# n = 3\n",
     "integral = Gaussian_double_integral(example,3)\n",
@@ -334,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "1e93836c",
    "metadata": {},
    "outputs": [
@@ -342,6 +353,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The 'exact' solution is:  0.6666666666666669\n",
       "The area A for the second integral with n = 3 is:  0.6691796338994718\n",
       "The area A for the second integral with n = 6 is:  0.6670464379156136\n",
       "The area A for the second integral with n = 8 is:  0.6668355801001764\n",
@@ -351,6 +363,10 @@
    ],
    "source": [
     "first = False\n",
+    "\n",
+    "F = lambda x, y: 1.0\n",
+    "exact = integrate.dblquad(F, 0, 1, lambda y: 0, lambda y: np.sqrt(1.0 - y))\n",
+    "print(\"The 'exact' solution is: \",exact[0])\n",
     "\n",
     "# n = 3\n",
     "integral = Gaussian_double_integral(example,3)\n",
@@ -410,6 +426,10 @@
    "source": [
     "area = True\n",
     "example = 3\n",
+    "\n",
+    "F = lambda y, x: 1.0 - x - y\n",
+    "exact = integrate.dblquad(F, 0, 1, lambda x: 0, lambda x: 1.0 - x)\n",
+    "print(\"The 'exact' solution is: \",exact[0])\n",
     "\n",
     "# n = 3\n",
     "integral = Gaussian_double_integral(example,3)\n",
@@ -493,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1d87ed34",
    "metadata": {},
    "outputs": [
@@ -501,6 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The volume of the calota with n = 3 is:  0.1799870791119152\n",
       "The volume of the calota with n = 6 is:  0.1799870791119152\n",
       "The volume of the calota with n = 8 is:  0.17998707911191525\n",
       "The volume of the calota with n = 10 is:  0.17998707911191525\n"
@@ -511,7 +532,9 @@
     "calota = True\n",
     "example = 4\n",
     "\n",
-    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The volume of the calota with n = 3 is: \",2.0 * np.pi * integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -537,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "97e90791",
    "metadata": {},
    "outputs": [
@@ -545,6 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The volume of the solid with n = 3 is:  3.8438929403544178\n",
       "The volume of the solid with n = 6 is:  3.7581650328967093\n",
       "The volume of the solid with n = 8 is:  3.7582492624394384\n",
       "The volume of the solid with n = 10 is:  3.7582496332093873\n"
@@ -553,6 +577,10 @@
    ],
    "source": [
     "calota = False\n",
+    "\n",
+    "# n = 3\n",
+    "integral = Gaussian_double_integral(example,3)\n",
+    "print(\"The volume of the solid with n = 3 is: \",2.0 * np.pi * integral)\n",
     "\n",
     "# n = 6\n",
     "integral = Gaussian_double_integral(example,6)\n",
@@ -566,6 +594,14 @@
     "integral = Gaussian_double_integral(example,10)\n",
     "print(\"The volume of the solid with n = 10 is: \",2.0 * np.pi * integral)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4d1c55d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
