--- a/ep1/Tarefa 1.ipynb
+++ b/ep1/Tarefa 1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,24 +85,35 @@
     "    cc = np.copy(c[:-1]); cc[-1] = 0.0\n",
     "\n",
     "    ludcmp_tri(l, u, cc) #LU decomposition of the tridiagonal submatrix T\n",
-    "\n",
-    "    #Solution of the first tridiagonal subsystem\n",
-    "    y = np.copy(d[:-1])\n",
-    "    ludcmp_tri_solve(l, u, cc, y)\n",
-    "\n",
-    "    #Solution of the second tridiagonal subsystem\n",
-    "    z = np.zeros(len(a)-1); z[0] = a[0]; z[-1] = c[-2]\n",
-    "    ludcmp_tri_solve(l, u, cc, z)\n",
-    "\n",
-    "    #Solution of the cyclic system\n",
-    "    x = np.empty(len(a)) #Allocate memory\n",
-    "    x[-1] = (d[-1]-c[-1]*y[0]-a[-1]*y[-1])/(b[-1]-c[-1]*z[0]-a[-1]*z[-1])\n",
-    "    x[:-1] = y - x[-1]*z\n",
-    "\n",
+    "    \n",
     "    print(\"L: \")\n",
     "    print(l)\n",
     "    print(\"\\n U: \")\n",
     "    print(u)\n",
+    "\n",
+    "    #Solution of the first tridiagonal subsystem\n",
+    "    y = np.copy(d[:-1])\n",
+    "    ludcmp_tri_solve(l, u, cc, y)\n",
+    "    \n",
+    "    print(\"\\n y: \")\n",
+    "    print(y)\n",
+    "\n",
+    "    #Solution of the second tridiagonal subsystem\n",
+    "    z = np.zeros(len(a)-1); z[0] = a[0]; z[-1] = c[-2]\n",
+    "    ludcmp_tri_solve(l, u, cc, z)\n",
+    "    \n",
+    "    print(\"\\n z: \")\n",
+    "    print(z)\n",
+    "\n",
+    "    #Solution of the cyclic system\n",
+    "    x = np.empty(len(a)) #Allocate memory\n",
+    "    x[-1] = (d[-1]-c[-1]*y[0]-a[-1]*y[-1])/(b[-1]-c[-1]*z[0]-a[-1]*z[-1])\n",
+    "    \n",
+    "    print(\"\\n xn: \",x[-1])\n",
+    "    \n",
+    "    x[:-1] = y - x[-1]*z\n",
+    "\n",
+    "    \n",
     "\n",
     "    return x"
    ]
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -126,11 +137,11 @@
       "\n",
       "       a          b           c           d\n",
       "\n",
-      " 0.25000000  2.00000000  0.75000000  0.96858316\n",
-      " 0.37500000  2.00000000  0.62500000  0.53582679\n",
-      " 0.41666667  2.00000000  0.58333333 -0.63742399\n",
-      " 0.43750000  2.00000000  0.56250000 -0.63742399\n",
-      " 0.90000000  2.00000000  0.10000000  1.00000000\n",
+      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
+      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
+      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
+      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
+      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
       "\n",
       "\n"
      ]
@@ -139,10 +150,15 @@
    "source": [
     "n = 5\n",
     "iv = np.arange(n) + 1.0 #Vetor formado pelos índices 1,...,n\n",
-    "a = np.empty(n); a[:-1] = (2*iv[:-1] - 1) / (4*iv[:-1]); a[-1] = (2*iv[-1] - 1) / (2*iv[-1]) #Vetor a\n",
-    "c = 1 - a #Vetor c\n",
-    "b = 2*np.ones(n) #Vetor b\n",
-    "d = np.cos(2*np.pi*iv*iv/(n*n)) #Lado direito so sistema tridiagonal cíclico\n",
+    "# a = np.empty(n); a[:-1] = (2*iv[:-1] - 1) / (4*iv[:-1]); a[-1] = (2*iv[-1] - 1) / (2*iv[-1]) #Vetor a\n",
+    "# c = 1 - a #Vetor c\n",
+    "# b = 2*np.ones(n) #Vetor b\n",
+    "# d = np.cos(2*np.pi*iv*iv/(n*n)) #Lado direito so sistema tridiagonal cíclico\n",
+    "\n",
+    "a = np.ones(n)\n",
+    "b = 2 * np.ones(n)\n",
+    "c = np.ones(n)\n",
+    "d = np.ones(n)\n",
     "\n",
     "print(\"\\n%8s %10s %11s %11s\\n\" % ('a', 'b', 'c', 'd')) #Veja os dados\n",
     "for i in range(n):\n",
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -160,18 +176,26 @@
      "output_type": "stream",
      "text": [
       "L: \n",
-      "[0.         0.1875     0.22408964 0.23522214]\n",
+      "[0.         0.5        0.66666667 0.75      ]\n",
       "\n",
       " U: \n",
-      "[2.         1.859375   1.85994398 1.86278709]\n",
+      "[2.         1.5        1.33333333 1.25      ]\n",
+      "\n",
+      " y: \n",
+      "[0.4 0.2 0.2 0.4]\n",
+      "\n",
+      " z: \n",
+      "[ 0.6 -0.2 -0.2  0.6]\n",
+      "\n",
+      " xn:  0.24999999999999997\n",
       "\n",
       "         x\n",
       "\n",
-      " 0.2888525037465419\n",
-      " 0.2903382545973282\n",
-      "-0.2450710449929809\n",
-      "-0.4598677243056251\n",
-      " 0.6924978507502042\n",
+      " 0.2500000000000001\n",
+      " 0.2500000000000000\n",
+      " 0.2500000000000000\n",
+      " 0.2500000000000001\n",
+      " 0.2500000000000000\n",
       "\n",
       "\n"
      ]
@@ -204,7 +228,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Erro = 1.9e-16\n",
+      "Erro = 8.4e-16\n",
       "\n"
      ]
     }
@@ -240,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
