--- a/ep1/Tarefa 1.ipynb
+++ b/ep1/Tarefa 1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -137,28 +137,43 @@
       "\n",
       "       a          b           c           d\n",
       "\n",
-      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
-      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
-      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
-      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
-      " 1.00000000  2.00000000  1.00000000  1.00000000\n",
+      " 0.25000000  2.00000000  0.75000000  0.99987663\n",
+      " 0.37500000  2.00000000  0.62500000  0.99802673\n",
+      " 0.41666667  2.00000000  0.58333333  0.99002366\n",
+      " 0.43750000  2.00000000  0.56250000  0.96858316\n",
+      " 0.45000000  2.00000000  0.55000000  0.92387953\n",
+      " 0.45833333  2.00000000  0.54166667  0.84432793\n",
+      " 0.46428571  2.00000000  0.53571429  0.71812630\n",
+      " 0.46875000  2.00000000  0.53125000  0.53582679\n",
+      " 0.47222222  2.00000000  0.52777778  0.29404033\n",
+      " 0.47500000  2.00000000  0.52500000  0.00000000\n",
+      " 0.47727273  2.00000000  0.52272727 -0.32391742\n",
+      " 0.47916667  2.00000000  0.52083333 -0.63742399\n",
+      " 0.48076923  2.00000000  0.51923077 -0.88376563\n",
+      " 0.48214286  2.00000000  0.51785714 -0.99802673\n",
+      " 0.48333333  2.00000000  0.51666667 -0.92387953\n",
+      " 0.48437500  2.00000000  0.51562500 -0.63742399\n",
+      " 0.48529412  2.00000000  0.51470588 -0.17192910\n",
+      " 0.48611111  2.00000000  0.51388889  0.36812455\n",
+      " 0.48684211  2.00000000  0.51315789  0.81814972\n",
+      " 0.97500000  2.00000000  0.02500000  1.00000000\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "n = 5\n",
+    "n = 20\n",
     "iv = np.arange(n) + 1.0 #Vetor formado pelos índices 1,...,n\n",
-    "# a = np.empty(n); a[:-1] = (2*iv[:-1] - 1) / (4*iv[:-1]); a[-1] = (2*iv[-1] - 1) / (2*iv[-1]) #Vetor a\n",
-    "# c = 1 - a #Vetor c\n",
-    "# b = 2*np.ones(n) #Vetor b\n",
-    "# d = np.cos(2*np.pi*iv*iv/(n*n)) #Lado direito so sistema tridiagonal cíclico\n",
+    "a = np.empty(n); a[:-1] = (2*iv[:-1] - 1) / (4*iv[:-1]); a[-1] = (2*iv[-1] - 1) / (2*iv[-1]) #Vetor a\n",
+    "c = 1 - a #Vetor c\n",
+    "b = 2*np.ones(n) #Vetor b\n",
+    "d = np.cos(2*np.pi*iv*iv/(n*n)) #Lado direito so sistema tridiagonal cíclico\n",
     "\n",
-    "a = np.ones(n)\n",
-    "b = 2 * np.ones(n)\n",
-    "c = np.ones(n)\n",
-    "d = np.ones(n)\n",
+    "# a = np.ones(n)\n",
+    "# b = 2 * np.ones(n)\n",
+    "# c = np.ones(n)\n",
+    "# d = np.ones(n)\n",
     "\n",
     "print(\"\\n%8s %10s %11s %11s\\n\" % ('a', 'b', 'c', 'd')) #Veja os dados\n",
     "for i in range(n):\n",
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -176,26 +191,54 @@
      "output_type": "stream",
      "text": [
       "L: \n",
-      "[0.         0.5        0.66666667 0.75      ]\n",
+      "[0.         0.1875     0.22408964 0.23522214 0.2415735  0.24587182\n",
+      " 0.2489774  0.25132199 0.25315296 0.25462172 0.25582577 0.2568306\n",
+      " 0.25768181 0.25841208 0.25904544 0.25959998 0.26008953 0.26052488\n",
+      " 0.26091455]\n",
       "\n",
       " U: \n",
-      "[2.         1.5        1.33333333 1.25      ]\n",
+      "[2.         1.859375   1.85994398 1.86278709 1.86411491 1.8647705\n",
+      " 1.86513724 1.86536322 1.86551249 1.86561631 1.86569147 1.86574764\n",
+      " 1.86579072 1.8658245  1.86585147 1.86587334 1.86589134 1.86590631\n",
+      " 1.86591891]\n",
       "\n",
       " y: \n",
-      "[0.4 0.2 0.2 0.4]\n",
+      "[ 0.37843963  0.32399649  0.33299023  0.32407657  0.31066096  0.28495119\n",
+      "  0.24376482  0.1834894   0.1027449   0.0036052  -0.10669377 -0.21474018\n",
+      " -0.30109351 -0.34346605 -0.320406   -0.22656567 -0.05642858  0.09885073\n",
+      "  0.38501251]\n",
       "\n",
       " z: \n",
-      "[ 0.6 -0.2 -0.2  0.6]\n",
+      "[ 1.35222221e-01 -2.72592563e-02  6.09628742e-03 -1.43065951e-03\n",
+      "  3.45232504e-04 -8.48513229e-05  2.11773807e-05 -5.52440818e-06\n",
+      "  2.11184782e-06 -3.05990019e-06  9.74604319e-06 -3.44953868e-05\n",
+      "  1.23495926e-04 -4.43747837e-04  1.59880578e-03 -5.77380667e-03\n",
+      "  2.08934629e-02 -7.57421523e-02  2.75016182e-01]\n",
       "\n",
-      " xn:  0.24999999999999997\n",
+      " xn:  0.3558920477126344\n",
       "\n",
       "         x\n",
       "\n",
-      " 0.2500000000000001\n",
-      " 0.2500000000000000\n",
-      " 0.2500000000000000\n",
-      " 0.2500000000000001\n",
-      " 0.2500000000000000\n",
+      " 0.3303151204455732\n",
+      " 0.3336978395498074\n",
+      " 0.3308206066585067\n",
+      " 0.3245857335779274\n",
+      " 0.3105380952172078\n",
+      " 0.2849813853941887\n",
+      " 0.2437572819798475\n",
+      " 0.1834913690915583\n",
+      " 0.1027441522217908\n",
+      " 0.0036062880967114\n",
+      "-0.1066972352357588\n",
+      "-0.2147279021740320\n",
+      "-0.3011374595523034\n",
+      "-0.3433081265489520\n",
+      "-0.3209750072616683\n",
+      "-0.2245108196566904\n",
+      "-0.0638644000832738\n",
+      " 0.1258067611713189\n",
+      " 0.2871364375011199\n",
+      " 0.3558920477126344\n",
       "\n",
       "\n"
      ]
@@ -228,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Erro = 8.4e-16\n",
+      "Erro = 2.2e-16\n",
       "\n"
      ]
     }
